[gd_scene load_steps=11 format=3 uid="uid://ddl7k4sxdmy7"]

[ext_resource type="Texture2D" uid="uid://burj0gufo5m7e" path="res://Assets/game/player.png" id="1_2gpls"]
[ext_resource type="Script" path="res://Scripts/item_menu.gd" id="1_sf7qp"]
[ext_resource type="Texture2D" uid="uid://b82ix0bpdirdv" path="res://Assets/game/used weapons/sword1.png" id="2_u32ov"]
[ext_resource type="Texture2D" uid="uid://cqertrf4v63rj" path="res://Assets/game/used weapons/bow1.png" id="3_jbllp"]
[ext_resource type="Texture2D" uid="uid://d0441aq3tsqjx" path="res://Assets/game/used weapons/shield1.png" id="4_nscvx"]
[ext_resource type="Texture2D" uid="uid://csclkw77aa2rr" path="res://Assets/game/used weapons/arrow1.png" id="5_n0no4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bihlq"]
bg_color = Color(0.509804, 0.623529, 0.654902, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pq6t5"]
bg_color = Color(0.6, 0.6, 0.6, 0.258824)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_80hog"]
bg_color = Color(0.172549, 0.266667, 0.313726, 0.968627)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h3u18"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="item_menu" type="Control"]
z_index = 10
z_as_relative = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1745.0
offset_bottom = -959.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sf7qp")

[node name="ItemMenuScreen" type="Panel" parent="."]
layout_mode = 0
offset_right = 175.0
offset_bottom = 121.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bihlq")

[node name="Player_Icon" type="Panel" parent="ItemMenuScreen"]
layout_mode = 0
offset_left = 11.0
offset_top = 15.0
offset_right = 72.0
offset_bottom = 87.0
scale = Vector2(0.8, 0.8)
theme_override_styles/panel = SubResource("StyleBoxFlat_pq6t5")

[node name="Panel" type="Panel" parent="ItemMenuScreen/Player_Icon"]
layout_mode = 0
offset_top = 5.0
offset_right = 40.0
offset_bottom = 45.0
scale = Vector2(1.52311, 1.85721)
theme_override_styles/panel = SubResource("StyleBoxFlat_80hog")

[node name="Player" type="Sprite2D" parent="ItemMenuScreen/Player_Icon"]
position = Vector2(30, 37)
scale = Vector2(1.87232, 1.72218)
texture = ExtResource("1_2gpls")

[node name="Panel" type="Panel" parent="ItemMenuScreen"]
layout_mode = 0
offset_left = 80.0
offset_top = 30.0
offset_right = 120.0
offset_bottom = 70.0
scale = Vector2(0.449114, 0.434517)

[node name="Panel2" type="Panel" parent="ItemMenuScreen"]
layout_mode = 0
offset_left = 80.0
offset_top = 47.0
offset_right = 120.0
offset_bottom = 87.0
scale = Vector2(0.449114, 0.434517)

[node name="Panel3" type="Panel" parent="ItemMenuScreen"]
layout_mode = 0
offset_left = 80.0
offset_top = 64.0
offset_right = 120.0
offset_bottom = 104.0
scale = Vector2(0.449114, 0.434517)

[node name="Panel4" type="Panel" parent="ItemMenuScreen"]
layout_mode = 0
offset_left = 80.0
offset_top = 81.0
offset_right = 120.0
offset_bottom = 121.0
scale = Vector2(0.449114, 0.434517)

[node name="ItemList1" type="ItemList" parent="ItemMenuScreen"]
layout_mode = 0
offset_left = 73.0
offset_top = 30.0
offset_right = 113.0
offset_bottom = 114.0
scale = Vector2(0.8, 0.8)
theme_override_styles/panel = SubResource("StyleBoxFlat_h3u18")
allow_search = false
auto_height = true
item_count = 4
max_columns = 3
same_column_width = true
fixed_column_width = 40
icon_mode = 0
item_0/text = ""
item_0/icon = ExtResource("2_u32ov")
item_1/text = ""
item_1/icon = ExtResource("3_jbllp")
item_2/text = ""
item_2/icon = ExtResource("4_nscvx")
item_3/text = ""
item_3/icon = ExtResource("5_n0no4")
